--- a/notebooks/nb_91_OfflineRLDatasetLibraries.ipynb
+++ b/notebooks/nb_91_OfflineRLDatasetLibraries.ipynb
@@ -314,6 +314,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "def create_dropdown(options):\n",
+    "    # Create the dropdown widget\n",
+    "    dropdown = widgets.Dropdown(\n",
+    "        options=options,\n",
+    "        value=options[0],  # Default value\n",
+    "        description='Select an option:'\n",
+    "    )\n",
+    "\n",
+    "    # Define a function to handle the dropdown value change\n",
+    "    def handle_dropdown_change(change):\n",
+    "        print(f'Selected option: {change.new}')\n",
+    "\n",
+    "    # Attach the event handler to the dropdown widget\n",
+    "    dropdown.observe(handle_dropdown_change, names='value')\n",
+    "\n",
+    "    # Display the dropdown widget\n",
+    "    display(dropdown)\n",
+    "\n",
+    "# Define the options for the dropdown menu\n",
+    "options = ['Option 1', 'Option 2', 'Option 3']\n",
+    "\n",
+    "# Call the create_dropdown function with the options\n",
+    "create_dropdown(options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
