--- a/notebooks/nb_93_imitation_learning.ipynb
+++ b/notebooks/nb_93_imitation_learning.ipynb
@@ -110,7 +110,8 @@
     "from matplotlib import pyplot as plt\n",
     "import pickle\n",
     "from itertools import accumulate\n",
-    "from training_rl.offline_rl.visualizations.utils import policy_rollout_torcs_env, compare_policy_decisions_vs_expert_suggestions\n",
+    "from training_rl.offline_rl.visualizations.utils import policy_rollout_torcs_env, \\\n",
+    "    compare_policy_decisions_vs_expert_suggestions\n",
     "\n",
     "\n",
     "\n",
@@ -1155,7 +1156,7 @@
     "    render_mode=None,\n",
     "    policy_model=trained_bc_policy,\n",
     "    num_frames=NUM_STEPS,\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -1181,12 +1182,6 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Delete \n",
-    "NUM_STEPS = 2000\n",
-    "\n",
-    "#from training_rl.offline_rl.offline_policies.policy_registry import PolicyFactoryRegistry\n",
-    "#trained_bc_policy = PolicyFactoryRegistry.dagger_torcs()\n",
-    "\n",
     "# Expert policy\n",
     "policy_expert = BehaviorPolicyRestorationConfigFactoryRegistry.torcs_expert_policy\n",
     "\n",
@@ -1236,39 +1231,44 @@
    },
    "outputs": [],
    "source": [
-    "DAGGER_ITERS = 20\n",
+    "DAGGER_ITERS = 10\n",
     "\n",
     "corrected_actions = np.array(output_initial_phase[\"actions_advisor\"])\n",
     "collected_observations = np.array(output_initial_phase[\"observations\"])\n",
     "\n",
     "# We will make a copy of the bc policy just to get bc in case we need it later\n",
-    "dagger_policy = deepcopy(trained_bc_policy.actor)\n",
+    "dagger_policy = deepcopy(trained_bc_policy)\n",
     "\n",
     "\n",
-    "for dagger_iter in range(DAGGER_ITERS):\n",
+    "try:\n",
+    "        \n",
+    "    for dagger_iter in range(DAGGER_ITERS):\n",
     "\n",
-    "    model_dagger_fit(\n",
-    "        input_data=torch.Tensor(collected_observations),\n",
-    "        target_data=torch.Tensor(corrected_actions),\n",
-    "        model=dagger_policy,\n",
-    "        epochs=1,\n",
-    "    )\n",
-    "    \n",
-    "    output_aggregation_phase = policy_rollout_torcs_env(\n",
-    "        driver_policy=dagger_policy,\n",
-    "        advisor_policy=policy_expert,\n",
-    "        env_collected_quantities=\"angle\",\n",
-    "        num_steps=NUM_STEPS,\n",
-    "    )\n",
-    "    \n",
-    "    compare_policy_decisions_vs_expert_suggestions(\n",
-    "        policy_actions=output_aggregation_phase[\"actions_driver\"],\n",
-    "        expert_suggestions=output_aggregation_phase[\"actions_advisor\"]\n",
-    "    )\n",
+    "        model_dagger_fit(\n",
+    "            input_data=torch.Tensor(collected_observations),\n",
+    "            target_data=torch.Tensor(corrected_actions),\n",
+    "            model=dagger_policy,\n",
+    "            epochs=1,\n",
+    "        )\n",
     "\n",
-    "    corrected_actions = np.concatenate([np.array(output_aggregation_phase[\"actions_advisor\"]), corrected_actions], axis=0)\n",
-    "    collected_observations = np.concatenate([np.array(output_aggregation_phase[\"observations\"]), collected_observations], axis=0)\n",
-    "    "
+    "        output_aggregation_phase = policy_rollout_torcs_env(\n",
+    "            driver_policy=dagger_policy,\n",
+    "            advisor_policy=policy_expert,\n",
+    "            env_collected_quantities=\"angle\",\n",
+    "            num_steps=NUM_STEPS,\n",
+    "        )\n",
+    "\n",
+    "        compare_policy_decisions_vs_expert_suggestions(\n",
+    "            policy_actions=output_aggregation_phase[\"actions_driver\"],\n",
+    "            expert_suggestions=output_aggregation_phase[\"actions_advisor\"]\n",
+    "        )\n",
+    "\n",
+    "        corrected_actions = np.concatenate([np.array(output_aggregation_phase[\"actions_advisor\"]), corrected_actions], axis=0)\n",
+    "        collected_observations = np.concatenate([np.array(output_aggregation_phase[\"observations\"]), collected_observations], axis=0)\n",
+    "\n",
+    "        \n",
+    "except KeyboardInterrupt:\n",
+    "        pass"
    ]
   },
   {
@@ -1635,7 +1635,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "232.4px"
+    "width": "339.2px"
    },
    "toc_section_display": true,
    "toc_window_display": true
