Typos corrected and minor changes in notebooks.

--- a/notebooks/nb_94_Offline_RL_theory.ipynb
+++ b/notebooks/nb_94_Offline_RL_theory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%presentation_style"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
+       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
+       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
+       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
+       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
+       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
+       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
+       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
+       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
+       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_latex_macros"
    ]
@@ -47,7 +240,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\"> Offline RL Part I </div>"
@@ -94,9 +291,9 @@
     "<img src=\"_static/images/nb_94_off_policy_vs_offline.png\" alt=\"offline_rl\" style=\"width:70%\">\n",
     "</div>\n",
     "\n",
-    "**This is just a qualitative parallelism and offline RL will work even if the data in your reply buffer is far from optimal.**\n",
+    "**This is just a qualitative parallelism, and offline RL will work even if the data in your replay buffer is far from optimal.**\n",
     "\n",
-    "**However, even if both approaches seem close, off-policy methods won't be able to work with collected data.**"
+    "**However, even though both approaches seem similar, off-policy methods won't be able to work with collected data directly.**"
    ]
   },
   {
@@ -130,7 +327,7 @@
     "<img src=\"_static/images/nb_94_q_value.png\" alt=\"offline_rl\" style=\"height:200px;\">\n",
     "\n",
     "\n",
-    "were we just replaced the reply buffer with the static dataset $D$.\n",
+    "where we just replaced the reply buffer with the static dataset $D$.\n",
     "\n",
     "**As seen in the (Evaluation) step, the only potential out-of-distribution (o.o.d) issue arises when computing action $a'$, as all other values ($s$, $a$, $s'$) are from the dataset $D$.**\n",
     "\n",
@@ -188,6 +385,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "env = gym.make(\"HalfCheetah-v4\", render_mode=\"rgb_array_list\")\n",
+    "\n",
+    "offpolicy_rendering(\n",
+    "    env_or_env_name=env,\n",
+    "    render_mode = \"rgb_array_list\",\n",
+    "    behavior_policy_name = \"random\",\n",
+    "    num_frames=100,\n",
+    "    fps=10,\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -195,22 +410,7 @@
     }
    },
    "source": [
-    "env = gym.make(\"HalfCheetah-v4\", render_mode=\"rgb_array_list\")\n",
-    "\n",
-    "offpolicy_rendering(\n",
-    "    env_or_env_name=env,\n",
-    "    render_mode=\"rgb_array_list\",\n",
-    "    behavior_policy_name=\"random\",\n",
-    "    num_frames=100,\n",
-    "    fps=10,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Let's gor to exercises in nb_95**"
+    "**Let's go to the exercises in nb_95**"
    ]
   },
   {
@@ -292,7 +492,7 @@
    "source": [
     "### I - Policy constraint methods\n",
     "\n",
-    "One option we have to encourage to copy the expert knowledge on the data but restrict undesired o.o.d. situations is to constraint the learned policy to copy the right behavior oberved in the data."
+    "One option we have to encourage to copy the expert knowledge in the data but restrict undesired o.o.d. situations is to constraint the learned policy to mimic the right behavior observed in the data."
    ]
   },
   {
@@ -308,7 +508,7 @@
     "**We have access to the behavior policy, $\\bf \\pi_\\beta$**\n",
     "\n",
     "\n",
-    "As we already have $\\pi_\\beta$ we can constrain the learned and behavioral policy through:\n",
+    "Since we already have $\\pi_\\beta$, we can constrain the learned and behavioral policy using:\n",
     "\n",
     "\\begin{equation}\n",
     "D_{KL}(\\pi(.|s)||\\pi_{\\beta}(.|s)) \\leq \\epsilon\n",
@@ -329,7 +529,7 @@
     "    </div>\n",
     "</div>\n",
     "\n",
-    "with the Kullback-leibler divergence, $D_{KL}$, defined as:\n",
+    "where the Kullback-Leibler divergence, $D_{KL}$, is defined as:\n",
     "\n",
     "$$\n",
     "D_{KL}(\\pi(.|s)||\\pi_{\\beta}(.|s)) = \\sum_a \\pi(a|s) log \\frac{\\pi(a|s)}{\\pi_{\\beta}(a|s)} \n",
@@ -367,11 +567,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "$$\n",
     "{\\hat Q}^{k+1} \\leftarrow L_1 = \\arg \\min_Q \\left[ {\\alpha} \\mathbb{E}_{s\\sim D, a \\sim \\mu(a|s)}[Q_\\phi(s, a)] +    \\mathbb{E}_{(s,a,s')\\sim D} \\left[\\left( Q_\\phi(s, a) - r(s, a) - \\gamma \\mathbb{E}_{a' \\sim\\pi_\\theta(a'|s')}[Q_\\phi(s', a')] \\right)^2 \\right] \\right]  \\tag{Evaluation}\n",
-    "$$\n"
+    "$$"
    ]
   },
   {
@@ -446,12 +650,12 @@
     }
    },
    "source": [
-    "What about to constraint the policy support, i.e. we don't focus on the probability of action $a$ within the dataset but only if that action is included in the dataset.\n",
+    "What about constraining the policy support? In other words, **we don't focus on the probability of action $a$ within the dataset, but only on whether that action is included in the dataset**.\n",
     "\n",
     "<img src=\"_static/images/policy_constraint_vs_support.png\" alt=\"offline_rl_4\" width=40%>\n",
     "<div class=\"slide title\"> Fig.4: distributional vs. support policy constraint </div>\n",
     "\n",
-    "**This is usually a good idea: Just constraint only on allow actions and let the job to find the action's probabilities to the evaluation-improvement equations.**"
+    "**This is usually a good idea: Just constrain only allowed actions and let the algorithm find the action probabilities through the evaluation-improvement equations.**"
    ]
   },
   {
@@ -499,11 +703,9 @@
     "\n",
     "with $A^{\\pi_\\beta}(s, a) = Q^{\\pi_\\beta}(s, a) -V^{\\pi_\\beta}(s)$ the Advantage function.\n",
     "\n",
+    "As we will shown next, eq.3 will give us the optimal policy. \n",
     "\n",
-    "As we wil shown next, eq.3, will give us the optimal policy. \n",
-    "\n",
-    "\n",
-    "Note also that to compute eq.3 we need $Q^{\\pi_\\beta}(s, a)$ and so we could use the dynamic programming evaluation step introduced before."
+    "Also note that to compute equation 3, we need $Q^{\\pi_\\beta}(s, a)$, so we could use the dynamic programming evaluation step introduced before."
    ]
   },
   {
@@ -519,7 +721,7 @@
     "<img src=\"_static/images/96_difference_reward.png\" alt=\"offline_rl_4\" width=80%>\n",
     "<div class=\"slide title\"> Figure 5: Optimal policy from difference reward maximization.</div>\n",
     "\n",
-    "**I summary eq.3 implies finding a policy $\\pi(a|s)$ that generates state-action pairs $(s_0,a_0)$ (constrained through the $D_{KL}$ to be close to the dataset) that lead to trajectories in our dataset with maximum reward, i.e. we are trying to find the optimal policy within the data.**"
+    "**I summary, eq.3 implies finding a policy $\\pi(a|s)$ that generates state-action pairs $(s_0,a_0)$ (constrained through the $D_{KL}$ to be close to the dataset) that lead to trajectories in our dataset with maximum reward. In other words, we are trying to find the optimal policy within the data.**"
    ]
   },
   {
@@ -530,7 +732,7 @@
     }
    },
    "source": [
-    "Let's jump to the final solution of eq.3 (if you are interested in more mathematical details see the slide below). The optimal policy, $\\hat{\\pi}_\\theta (a|s)$, is:\n",
+    "Let's jump to the final solution of eq.3. If you are interested in more mathematical details see the slide below. The optimal policy, $\\hat{\\pi}_\\theta (a|s)$, is:\n",
     "\n",
     "$$\n",
     "\\hat{\\pi}_\\theta (a|s) \\leftarrow\n",
@@ -539,20 +741,24 @@
     "\\tag{4}\n",
     "$$\n",
     "\n",
-    "**Interpretation: the maximization operation, in eq.4, implies that $\\pi_\\theta(a|s)$ will be maximum in state-action pairs within or close to $D$ but only if $(s,a)$ bring the agent to a high reward region, i.e. if $\\exp\\left(\\frac{1}{\\lambda} A^{D}(s, a)\\right)$ (or $A^{D}(s, a)$) is high.**\n",
+    "**Interpretation: the maximization operation in eq.4 implies that $\\pi_\\theta(a|s)$ will be maximum in state-action pairs within or close to $D$, but only if $(s,a)$ brings the agent to a high reward region, i.e., if $\\exp\\left(\\frac{1}{\\lambda} A^{D}(s, a)\\right)$ (or $A^{D}(s, a)$) is high.**\n",
     "\n",
     "This is in perfect agreement with out previous interpretation in fig.5.\n",
     "\n",
-    "**Finally, as said before, these kind of methods implement an evaluation step and, eq.4, plays the role of the improvement step."
+    "**Finally, as said before, these kind of methods implement an evaluation step, and eq.4, plays the role of the improvement step."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**ALERT!! : Only if you are interested in the math:**\n",
     "\n",
-    "It is easy to see that eq.3 solution is:\n",
+    "It is easy to see that the solution to eq.3 is:\n",
     "\n",
     "$\n",
     "\\pi^*(a|s) = \\frac{1}{Z(s)} \\pi_\\beta(a|s) \\exp\\left(\\frac{1}{\\lambda} A^{\\pi_\\beta}(s, a)\\right)  \\quad \\text{with } \\lambda \\in R\n",
@@ -561,9 +767,9 @@
     "\n",
     "were $\\lambda$ comes from a Lagrange multiplier that take into accounts the $D_{KL}$ constraint.\n",
     "\n",
-    "**Again eq.5 means that $\\pi^*(a|s)$ is given by the probability to find $(s,a)$ in the dataset (i.e. $\\pi_\\beta(a|s)$) times the probability that $(s,a)$ drive the agent to a high cumulative reward ($~ \\exp\\left(\\frac{1}{\\lambda} A^{\\pi_\\beta}(s, a)\\right)$).**\n",
+    "**Again eq.4 means that $\\pi^*(a|s)$ is given by the probability of finding $(s,a)$ in the dataset (i.e. $\\pi_\\beta(a|s)$) times the probability that $(s,a)$ drives the agent to a high cumulative reward ($~ \\exp\\left(\\frac{1}{\\lambda} A^{\\pi_\\beta}(s, a)\\right)$).**\n",
     "\n",
-    "Finally if we approximate out theoretical optimal policy $\\pi^*(a|s)$ by a DNN $\\pi_\\theta (a|s)$ we can use an SVI approach:\n",
+    "Finally, if we approximate out theoretical optimal policy $\\pi^*(a|s)$ by a DNN $\\pi_\\theta (a|s)$, we can use an SVI approach:\n",
     "\n",
     "$$\n",
     "\\pi_\\theta (a|s) = argmin_{\\pi_\\theta} \\mathbb{E}_{s \\sim d\\pi_\\beta(s)} \\left[ D_{KL}(\\pi^*(\\cdot|s) \\, \\Vert \\, \\pi_\\theta(\\cdot|s)) \\right] = \\\\\n",
@@ -583,7 +789,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Summary:\n",
     "\n",
@@ -625,9 +835,9 @@
     "<div class=\"slide title\"> Fig.6: Policy regularization approach </div>\n",
     "\n",
     "\n",
-    "**Main idea: introduce a new policy $\\mu(a|s)$ that tries to find the actions $a$ that maximize the DNN $Q_\\phi$ while at the same time we try to minimize $Q_\\phi$ on the $\\phi$ parameter space. This effect will be particularly important in actions that are o.o.d. that are the ones that are overestimate in general as we saw before.**\n",
+    "**Main idea: introduce a new policy $\\mu(a|s)$ that attempts to find the actions $a$ maximizing the DNN $Q_\\phi$, while simultaneously minimizing $Q_\\phi$ within the $\\phi$ parameter space. This effect is particularly crucial for o.o.d. actions, which are generally overestimated, as previously observed.**\n",
     "\n",
-    "**The policy $\\mu$ doesn't necessarily have to be proportional to $\\pi(a|s)$, but it should aim to maximize Q(s,a) consistently.**"
+    "**The policy $\\mu$ doesn't necessarily have to be proportional to $\\pi(a|s)$, but it should aim to maximize Q(s,a).**"
    ]
   },
   {
@@ -638,18 +848,18 @@
     }
    },
    "source": [
-    "These are some popular offline-RL algorithms, but the list is longer:\n",
+    "These are some popular offline RL algorithms, but the list is longer:\n",
     "\n",
     "<img src=\"_static/images/nb_94_popular_offline_rl_algorithms.png\" alt=\"offline_rl_4\" width=100%>\n",
     "\n",
-    "Note that most of them are of the type we already discussed, i.e. policy constraint and policy optimization methods."
+    "It's worth noting that most of these algorithms fall into the categories we've already discussed, namely policy constraint and policy optimization methods"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Appendix: Short review of some popular offline RL algorithms"
+    "# Appendix: Short review of some popular offline RL algorithms (WIP)"
    ]
   },
   {
