--- a/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
+++ b/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
@@ -45,34 +45,23 @@
     "\n",
     "import os\n",
     "import warnings\n",
-    "\n",
     "import gymnasium as gym\n",
     "import torch\n",
     "\n",
-    "from training_rl.offline_rl.behavior_policies.behavior_policy_registry import \\\n",
-    "    BehaviorPolicyType\n",
-    "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import \\\n",
-    "    ObstacleTypes\n",
-    "from training_rl.offline_rl.custom_envs.custom_envs_registration import (\n",
-    "    CustomEnv, RenderMode, register_grid_envs)\n",
-    "from training_rl.offline_rl.custom_envs.utils import (\n",
-    "    Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper)\n",
+    "from training_rl.offline_rl.behavior_policies.behavior_policy_registry import BehaviorPolicyType\n",
+    "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import ObstacleTypes\n",
+    "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv, RenderMode, register_grid_envs\n",
+    "from training_rl.offline_rl.custom_envs.utils import Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import \\\n",
     "    create_combined_minari_dataset\n",
-    "from training_rl.offline_rl.offline_policies.offpolicy_rendering import \\\n",
-    "    offpolicy_rendering\n",
+    "from training_rl.offline_rl.offline_policies.offpolicy_rendering import offpolicy_rendering\n",
     "from training_rl.offline_rl.offline_policies.policy_registry import PolicyName\n",
-    "from training_rl.offline_rl.offline_trainings.offline_training import \\\n",
-    "    offline_training\n",
+    "from training_rl.offline_rl.offline_trainings.offline_training import offline_training\n",
     "from training_rl.offline_rl.offline_trainings.policy_config_data_class import (\n",
     "    TrainedPolicyConfig, get_trained_policy_path)\n",
-    "from training_rl.offline_rl.offline_trainings.restore_policy_model import \\\n",
-    "    restore_trained_offline_policy\n",
-    "from training_rl.offline_rl.utils import (compare_state_action_histograms,\n",
-    "                                          load_buffer_minari,\n",
-    "                                          state_action_histogram)\n",
-    "from training_rl.offline_rl.visualizations.utils import (\n",
-    "    get_state_action_data_and_policy_grid_distributions, snapshot_env)\n",
+    "from training_rl.offline_rl.offline_trainings.restore_policy_model import restore_trained_offline_policy\n",
+    "from training_rl.offline_rl.utils import compare_state_action_histograms, state_action_histogram\n",
+    "from training_rl.offline_rl.visualizations.utils import get_state_action_data_and_policy_grid_distributions, snapshot_env\n",
     "from training_rl.offline_rl.utils import load_buffer_minari, widget_list\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -83,7 +72,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\"> Offline RL distributional shift exercises </div>"
@@ -91,21 +84,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Off-Policy Distributional Shift - I"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Exercise I:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "In this exercise we have two datasets that tries to bring the agent from (3,0) to (7,7) .\n",
     "\n",
@@ -140,14 +145,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**SOLUTION:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Create the environment**"
    ]
@@ -155,7 +168,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -177,15 +194,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Configure and rendering policies**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
@@ -195,12 +214,19 @@
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "DATA_SET_IDENTIFIER_II = \"_expert\"\n",
     "NUM_STEPS_II = 1000\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "select_policy_to_render = widget_list([BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II])"
@@ -209,7 +235,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "offpolicy_rendering(\n",
@@ -223,22 +253,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Create single Minari dataset"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "( give a look to **create_combined_minari_dataset(...)** ) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
@@ -249,19 +283,22 @@
     "        combined_dataset_identifier = \"combined_data_sets_random_walk\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
     ")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**check state-action distribution**"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#Create Buffers with minari datasets\n",
@@ -275,19 +312,22 @@
     "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.3))\n",
     "\n",
     "snapshot_env(env)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**offline policy training**"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "POLICY_NAME = PolicyName.dqn\n",
@@ -300,12 +340,13 @@
     "    render_mode=render_mode,\n",
     "    device=\"cpu\"\n",
     ")\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# Run the training\n",
@@ -325,26 +366,31 @@
     "    step_per_epoch=STEP_PER_EPOCH,\n",
     "    restore_training=False,\n",
     ")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Results"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Restore policy**"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "POLICY_FILE = \"policy_best_reward.pth\"\n",
@@ -356,11 +402,18 @@
     "log_name = os.path.join(name_expert_data, POLICY_NAME)\n",
     "log_path = get_trained_policy_path(log_name)\n",
     "policy.load_state_dict(torch.load(os.path.join(log_path, POLICY_FILE), map_location=\"cpu\"))\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Policy visualization**"
    ]
@@ -368,7 +421,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "#env_2D_grid_initial_config.obstacles = OBSTACLE.obst_free_8x8\n",
@@ -386,7 +443,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**State-action policy distribution**"
    ]
@@ -395,7 +456,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -420,14 +483,56 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Exercise II"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "source": [
+    "**1 - Train again the DQN but now with random data (i.e. suboptimal random policy  and increase the expert data too,\n",
+    "expert data ~ 30000).**\n",
+    "\n",
+    "Is the policy better? Why?\n",
+    "\n",
+    "Remove the walls and see what happens, i.e:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "env_2D_grid_initial_config.obstacles = ObstacleTypes.obst_free_8x8\n",
+    "env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=render_mode), env_config=env_2D_grid_initial_config)\n",
+    "\n",
+    "offpolicy_rendering(\n",
+    "    env_or_env_name=env,\n",
+    "    render_mode=render_mode,\n",
+    "    policy_model=policy,\n",
+    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
+    "    num_frames=100,\n",
+    "    imitation_policy_sampling=False\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**1 - Train again the DQN but now with random data (i.e. suboptimal random policy  and increase the expert data too,\n",
     "expert data ~ 30000).**\n",
@@ -440,7 +545,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "env_2D_grid_initial_config.obstacles = ObstacleTypes.obst_free_8x8\n",
@@ -455,9 +564,17 @@
     "    imitation_policy_sampling=False\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
